# PX4-trp-controller

./: CMakeLists.txt  README.md
ROMFS/px4fmu_common/init.d/: rc.mc_apps
boards/px4/fmu-v3/: default.cmake
launch/: 212_210mavros_sitl.launch  mavros_posix_sitl.launch  multi_uav_mavros_sitl.launch
launch/gps_pkg/: swarm.launch  swarm_0.launch  swarm_01.launch  swarm_012.launch  swarm_0123.launch  swarm_1.launch  swarm_2.launch  swarm_3.launch
src/drivers/pwm_out_sim/: PWMSim.cpp
src/drivers/px4fmu/: fmu.cpp  fmu.cpp.backup
src/drivers/px4io/: px4io.cpp
src/lib/FlightTasks/: FlightTasks.cpp  FlightTasks.hpp
src/lib/mixer/: mixer.cpp  mixer.h  mixer_group.cpp  mixer_multirotor.cpp
src/lib/pwm_limit/: pwm_limit.cpp
src/modules/ekf2/: ekf2_main.cpp
src/modules/usatl_modules/: CMakeLists.txt
src/modules/usatl_modules/flow_uart/: CMakeLists.txt  flow_uart.cpp
src/modules/usatl_modules/intel_t265/: CMakeLists.txt  intel_t265.cpp
src/modules/usatl_modules/intel_t265_sar/: CMakeLists.txt  intel_t265_sar.cpp
src/modules/usatl_modules/mesh_xbee_att_control/: CMakeLists.txt  mesh_xbee_att_control.cpp
src/modules/usatl_modules/miniflow/: CMakeLists.txt  miniflow.cpp
src/modules/usatl_modules/offb_ctrl/: CMakeLists.txt  message_type.h  offb_ctrl.cpp  offb_ctrl.h  offb_ctrl_params.c  readme.md
src/modules/usatl_modules/tofsense/: CMakeLists.txt  tofsense.cpp
src/modules/usatl_modules/xbee_att_control/: CMakeLists.txt  xbee_att_control.cpp
src/modules/usatl_modules/xbee_pose/: CMakeLists.txt  readme.md  xbee_pose.cpp  xbee_pose_params.c
(+28 files in other folders)
