#add_subdirectory(uart_debug)
#add_subdirectory(xbee_receive)
#add_subdirectory(xbee_sar)
#add_subdirectory(xbee_send)
#add_subdirectory(flow_uart)
add_subdirectory(miniflow)
add_subdirectory(intel_t265)
add_subdirectory(intel_t265_sar)
add_subdirectory(xbee_pose)
add_subdirectory(flow_uart)
add_subdirectory(xbee_att_control)
add_subdirectory(mesh_xbee_att_control)